--- a/src/assets/success.html
+++ b/src/assets/success.html
@@ -8,27 +8,63 @@
 	>
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Success</title>
+	<link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
 	<style>
+		html,
+		body {
+			padding: 0;
+			margin: 0;
+			height: 100%;
+			width: 100%;
+		}
+
+		body {
+			height: calc(100% - 24px);
+			background: linear-gradient(-20deg, rgb(210, 227, 255), rgb(242, 252, 253) 50%);
+		}
+
 		h1 {
 			font-family: Verdana, sans-serif;
 			font-size: 1em;
 			text-align: center;
 			margin-top: 1em;
 		}
+
+		.logo {
+			width: 220px;
+		}
+
+		.logo__wrapper {
+			margin-top: 24px;
+			width: 100%;
+			display: flex;
+			justify-content: center;
+		}
+
+		.blobs {
+			z-index: -1;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			max-height: 70%;
+			max-width: 70%;
+			min-width: 500px;
+		}
 	</style>
 </head>
 
 <body>
-<h1>
-	Successfully logged in, browser window can now be safely closed.
-	<br /> Browser window will automatically close in 5 seconds...
-</h1>
-</body>
+<header class="logo__wrapper">
+	<img src="/img/logo.svg" alt="Imagelance logo" class="logo" />
+</header>
 
-<script>
-	setTimeout(function () {
-		window.close()
-	}, 5000)
-</script>
+<main>
+	<h1>
+		Successfully logged in, browser window can now be safely closed.
+	</h1>
+</main>
+
+<img src="/img/sidebar-img.svg" alt="Imagelance blobs with format icons" class="blobs" />
+</body>
 </html>
